--- a/style.css
+++ b/style.css
@@ -523,7 +523,7 @@ textarea:focus-visible {
 
 .modalMenuContent {
     background-color: #FFE27C;
-    height: 100lvh;
+    
 }
 
 .modal_navigation_buttons {
@@ -548,8 +548,9 @@ textarea:focus-visible {
     flex-direction: row;
     width: 100%;
     height: 72px;
-    position: absolute;
+    position: relative;
     bottom: 0px;
+    left:  0px;
     align-items: center;
     justify-content: center;
     gap: 12px;
