--- a/style.css
+++ b/style.css
@@ -526,7 +526,7 @@ textarea:focus-visible {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100lvh;
+    height: 100%;
     
 }
 
