--- a/style.css
+++ b/style.css
@@ -517,8 +517,9 @@ textarea:focus-visible {
 .modalContentWrapper {
     display: flex;
     flex-direction: column;
-   gap: 116px;
-    height: calc(100lvh - 72px);
+    gap: 116px;
+    height: 100lvh;
+    margin-bottom: 72px;
 }
 
 .modalMenuContent {
@@ -552,7 +553,7 @@ textarea:focus-visible {
     flex-direction: row;
     width: 100%;
     height: 72px;
-    position: relative;
+    position: sticky;
     bottom: 0px;
     left:  0px;
     align-items: center;
