--- a/style.css
+++ b/style.css
@@ -552,7 +552,7 @@ textarea:focus-visible {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 72px;
+    line-height: 72px;
     position: sticky;
     bottom: 0px;
     left:  0px;
