--- a/style.css
+++ b/style.css
@@ -527,7 +527,7 @@ textarea:focus-visible {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    height: 100dvh;
     
 }
 
