--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ a:active {
 
 body {
     overflow: auto;
+    overflow-y: none;
     font-family: "Inter", sans-serif;
     box-sizing: border-box;
     line-height: 1;
@@ -556,6 +557,7 @@ textarea:focus-visible {
     flex-direction: row;
     width: 100%;
     line-height: 72px;
+    height: 72px;
     position: absolute;
     bottom: 0px;
     left:  0px;
