--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ a:active {
 
 body {
     overflow: auto;
+    overflow-y: none;
     font-family: "Inter", sans-serif;
     box-sizing: border-box;
     line-height: 1;
@@ -421,7 +422,6 @@ textarea {
     flex: 1;
     background-color: transparent;
     border-right: solid 1px black;
-    cursor: text;
 
 }
 
